--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hass-lovelace-kindle-screensaver",
-  "version": "1.0.4",
+  "version": "1.0.5",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -9,10 +9,11 @@
   "author": "sibbl",
   "license": "MIT",
   "dependencies": {
-    "cron": "^1.8.2",
-    "fs-extra": "^10.0.0",
-    "gm": "^1.23.1",
-    "mqtt": "^4.3.7",
-    "puppeteer": "^11.0.0"
+    "cron": "^3.1.7",
+    "fs-extra": "^11.2.0",
+    "gm": "^1.25.0",
+    "mqtt": "^5.10.1",
+    "puppeteer": "^23.2.1",
+    "async-retry": "^1.3.3"
   }
 }
